# diamond-lang

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  SECURITY.md  diamond.md  diamond2.md  diamond3.md  pyproject.toml
.github/: GUIDANCE.md
.github/workflows/: GUIDANCE.md  ci.yml  v1-gates.yml
benchmarks/: GUIDANCE.md  README.md
certification/: README.md
certification/real-repos/: README.md  REAL_REPO_CERTIFICATION_2026-03-03.md  run_pre_rust_certification.sh
design/: GUIDANCE.md
docs/: GUIDANCE.md  INDEX.md  PROJECT_STRUCTURE.md  PUBLISHABILITY_CHECKLIST.md  README.md  REFERENCE_MAP.md  START_HERE.md  STATUS.md
docs/architecture/: GUIDANCE.md  README.md
docs/bootstrapping/: GUIDANCE.md  README.md
docs/completeness/: DESIGN_EVIDENCE_GATE.md  DIAMOND_COMPLETENESS_WORKBOOK.md  STATUS_REPORT.md  completeness_inventory.csv
docs/design-decisions/: GUIDANCE.md  README.md
docs/language/: LANGUAGE_CONSTRUCT_TOOL_FRAMEWORK.md  LANGUAGE_DESIGN.md  LANGUAGE_DESIGN_AMENDMENTS.md
docs/reference/: API_REFERENCE.md  README.md
docs/security/: GUIDANCE.md  README.md
docs/spec/: GUIDANCE.md  capabilities.md  effects.md  grammar.md  overview.md  roadmap.dm  runtime.md  types.md
examples/: GUIDANCE.md  README.md  hello.dmd  simple_route.dmd
examples/agents/: GUIDANCE.md
examples/getting-started/: GUIDANCE.md  hello_world.dm
examples/integration/: GUIDANCE.md
research/: GUIDANCE.md
research/benchmarks/: README.md
scripts/: GUIDANCE.md  README.md
src/: INDEX.md
tests/: README.md
(+370 files in other folders)
