[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond-lang"
version = "0.1.0"
description = "Diamond language research and compiler toolchain"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["language-design", "transpiler", "compiler", "llm", "wasm", "verification"]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
